--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <section class="temas">
         <h3>Questões por Temas</h3>
         <div class="temas-grid">
-          <a href="matematica.html" class="tema">
+          <a href="./materias/matematica.html" class="tema">
             <i class="fas fa-square-root-alt"></i>
             <p>Matemática</p>
           </a>
