--- a/simulados/simulados.html
+++ b/simulados/simulados.html
@@ -21,11 +21,13 @@
 
     <main class="main-content">
       <h2>Escolha um Simulado</h2>
-      <div class="simulados-grid">
-        <div class="card" onclick="iniciarSimulado('enem_completo')">
-          <h3>ENEM Completo</h3>
-          <p>180 questões | Todas as áreas</p>
-        </div>
+        <div class="simulados-grid">
+  <div class="card" onclick="location.href='/simulados/enem.html'">
+    <h3>ENEM Completo</h3>
+    <p>180 questões | Todas as áreas</p>
+  </div>
+</div>
+
 
         <div class="card" onclick="iniciarSimulado('ciencias_natureza')">
           <h3>Ciências da Natureza</h3>
